--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,11 +18,14 @@
     "@material-ui/core": "^4.5.2",
     "firebase": "^7.2.2",
     "mobx": "^5.14.2",
+    "mobx-react": "^6.1.4",
     "next": "^9.1.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.6.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.5.0",
