--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.5.2",
+    "@material-ui/styles": "^4.6.0",
     "firebase": "^7.2.2",
     "mobx": "^5.14.2",
     "mobx-react": "^6.1.4",
