--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "./node_modules/.bin/eslint **/*.js",
-    "fixLinting": "./node_modules/.bin/eslint --fix **/*.js",
-    "format": "./node_modules/.bin/prettier --write **/*.js"
+    "lint": "./node_modules/.bin/eslint --ext .js .",
+    "fixLinting": "./node_modules/.bin/eslint --fix --ext .js .",
+    "format": "./node_modules/.bin/prettier --fix ."
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,6 @@
   "dependencies": {
     "@material-ui/core": "^4.5.2",
     "@material-ui/styles": "^4.6.0",
-    "firebase": "^7.4.0",
     "mobx": "^5.14.2",
     "mobx-react": "^6.1.4",
     "next": "^9.1.2",
