--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@material-ui/core": "^4.5.2",
     "@material-ui/styles": "^4.6.0",
+    "dotenv": "^8.2.0",
     "mobx": "^5.14.2",
     "mobx-react": "^6.1.4",
     "next": "^9.1.2",
