--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "./node_modules/.bin/eslint --ext .js .",
     "fixLinting": "./node_modules/.bin/eslint --fix --ext .js .",
-    "format": "./node_modules/.bin/prettier --fix ."
+    "format": "./node_modules/.bin/prettier --fix .",
+    "cypress:open": "cypress open"
   },
   "keywords": [],
   "author": "",
@@ -29,9 +30,11 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.6.0",
     "babel-eslint": "^10.0.3",
+    "cypress": "^3.7.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-cypress": "^2.8.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
